# python

./: README.md  TODO.md  pyproject.toml  setup.cfg  test.bat  test.sh
lib/: dialoget.py
test/apitee/: create_repo_on_org_github.py  update_repo_on_github.py  update_repo_on_github2.py
test/behave/: update_repo_on_github2.py
